# hybrid

./: .gitignore  .golangci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_AGENT.md  Makefile  README.md  SECURITY.md  gemini-extension.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.defn/: serve.pid
.defn/defn/.dolt/noms/: manifest
.defn/defn/.dolt/noms/oldgen/: manifest
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: falsifier-result.md  primitive-suggestion.md
.github/workflows/: ci.yml  codeql.yml
mcp_servers/cal_log/: README.md  go.mod  main.go  pyproject.toml  server.py  store.go  store_test.go
mcp_servers/cal_log/tests/: test_server.py
mcp_servers/metacog/: README.md  auditors.go  auditors_test.go  go.mod  go.sum  jsonl.go  main.go  substrate.go
mcp_servers/schemaforge/: README.md  client.go  corpus.go  go.mod  go.sum  main.go  ops.go  pilot_test.go  prompts.go  round.go  schemaforge_test.go
skill/: SKILL.md
skill/references/: DESIGN_INTERVIEW.md  EXAMPLES.md  PORTFOLIO_RETROFIT.md  PRIMITIVES.md  PRIOR_ART.md  STACKING.md
skills/hybrid-loops/: SKILL.md
skills/hybrid-loops/references/: AGENT_FRAMEWORKS.md  BLOCK_GRAPHS.md  BUILDING_BLOCKS.md  DESIGN_INTERVIEW.md  PRIMITIVES.md  PRIOR_ART.md  STACKING.md  THE_CASE.md
