[project]
name = "cal_log"
version = "0.1.0"
description = "Calibration logger MCP server for hybrid-loop projects: per-evaluator prediction logging with hit-rate aggregation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Justin Stimatze"}]
keywords = ["mcp", "llm-evaluator", "calibration", "hybrid-loops"]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
cal_log = "cal_log.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
